{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 24,
  "lineage": "5ce942a3-5650-d326-a69d-a6fc4439931b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:security-group/sg-0270d7150da5029c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0270d7150da5029c9",
            "ingress": [],
            "name": "terraform-20230426170437213100000001",
            "name_prefix": "terraform-",
            "owner_id": "540828511394",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "environment": "dev",
              "project": "Twala",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-505f3d2a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"everyshilling\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-06e1e9eb5ee7646be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e1e9eb5ee7646be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "everyshilling-dev-private-us-east-1c",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"everyshilling\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:security-group/sg-0ba667d9fcaf7f88e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba667d9fcaf7f88e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Service port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04579f7f77378b216"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "everyshilling-20230426183209294800000001",
            "name_prefix": "everyshilling-",
            "owner_id": "540828511394",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "environment": "dev",
              "project": "Twala",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.service.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"everyshilling\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress_3000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Service port",
            "from_port": 80,
            "id": "sgrule-1559793292",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ba667d9fcaf7f88e",
            "security_group_rule_id": "sgr-01bb8410cf093fe4e",
            "self": false,
            "source_security_group_id": "sg-04579f7f77378b216",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-512134252",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ba667d9fcaf7f88e",
            "security_group_rule_id": "sgr-0b4def60523236c33",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c507b37e5624575b",
            "association_id": "eipassoc-06db84c3d7f0a1c55",
            "domain": "vpc",
            "id": "eipalloc-0c507b37e5624575b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02d6b61395258b8a0",
            "private_dns": "ip-10-0-101-239.ec2.internal",
            "private_ip": "10.0.101.239",
            "public_dns": "ec2-54-90-146-83.compute-1.amazonaws.com",
            "public_ip": "54.90.146.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "everyshilling-dev-us-east-1a",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-us-east-1a",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fc0f3b0a062554c",
            "association_id": "eipassoc-0cf0113371b94d3ba",
            "domain": "vpc",
            "id": "eipalloc-03fc0f3b0a062554c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0704aa25681c4ac86",
            "private_dns": "ip-10-0-102-209.ec2.internal",
            "private_ip": "10.0.102.209",
            "public_dns": "ec2-35-174-46-114.compute-1.amazonaws.com",
            "public_ip": "35.174.46.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "everyshilling-dev-us-east-1b",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-us-east-1b",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6eae5bdb77b2ee6",
            "association_id": "eipassoc-0c8ee920eabd318ba",
            "domain": "vpc",
            "id": "eipalloc-0a6eae5bdb77b2ee6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e625227e940b9c3b",
            "private_dns": "ip-10-0-103-93.ec2.internal",
            "private_ip": "10.0.103.93",
            "public_dns": "ec2-35-175-26-46.compute-1.amazonaws.com",
            "public_ip": "35.175.26.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "everyshilling-dev-us-east-1c",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-us-east-1c",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:internet-gateway/igw-0ccd1436913db226e",
            "id": "igw-0ccd1436913db226e",
            "owner_id": "540828511394",
            "tags": {
              "Name": "everyshilling-dev",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c507b37e5624575b",
            "connectivity_type": "public",
            "id": "nat-0ae5b61242a671c07",
            "network_interface_id": "eni-02d6b61395258b8a0",
            "private_ip": "10.0.101.239",
            "public_ip": "54.90.146.83",
            "subnet_id": "subnet-009b45d00af13df7b",
            "tags": {
              "Name": "everyshilling-dev-us-east-1a",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-us-east-1a",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fc0f3b0a062554c",
            "connectivity_type": "public",
            "id": "nat-06154788532bf03ce",
            "network_interface_id": "eni-0704aa25681c4ac86",
            "private_ip": "10.0.102.209",
            "public_ip": "35.174.46.114",
            "subnet_id": "subnet-07a0d69b4f37d5ec2",
            "tags": {
              "Name": "everyshilling-dev-us-east-1b",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-us-east-1b",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6eae5bdb77b2ee6",
            "connectivity_type": "public",
            "id": "nat-0889b219a0441c35b",
            "network_interface_id": "eni-0e625227e940b9c3b",
            "private_ip": "10.0.103.93",
            "public_ip": "35.175.26.46",
            "subnet_id": "subnet-0a3da48706a889096",
            "tags": {
              "Name": "everyshilling-dev-us-east-1c",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-us-east-1c",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0717761642e69a5091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ae5b61242a671c07",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0717761642e69a509",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-027dc147d559e25531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06154788532bf03ce",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027dc147d559e2553",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-049a921a096c7b0811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0889b219a0441c35b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-049a921a096c7b081",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ccd1436913db226e",
            "id": "r-rtb-09107a6ec7aad28b51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09107a6ec7aad28b5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:route-table/rtb-0717761642e69a509",
            "id": "rtb-0717761642e69a509",
            "owner_id": "540828511394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ae5b61242a671c07",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "everyshilling-dev-private-us-east-1a",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-private-us-east-1a",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:route-table/rtb-027dc147d559e2553",
            "id": "rtb-027dc147d559e2553",
            "owner_id": "540828511394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06154788532bf03ce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "everyshilling-dev-private-us-east-1b",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-private-us-east-1b",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:route-table/rtb-049a921a096c7b081",
            "id": "rtb-049a921a096c7b081",
            "owner_id": "540828511394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0889b219a0441c35b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "everyshilling-dev-private-us-east-1c",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-private-us-east-1c",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:route-table/rtb-09107a6ec7aad28b5",
            "id": "rtb-09107a6ec7aad28b5",
            "owner_id": "540828511394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ccd1436913db226e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "everyshilling-dev-public",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-public",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c4a4ed5d774c99b",
            "route_table_id": "rtb-0717761642e69a509",
            "subnet_id": "subnet-052ced4c028671464"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00df5bff659bb5093",
            "route_table_id": "rtb-027dc147d559e2553",
            "subnet_id": "subnet-0fa081145067c456e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d25bc4e3d7b9b327",
            "route_table_id": "rtb-049a921a096c7b081",
            "subnet_id": "subnet-06e1e9eb5ee7646be"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cccc7ac6527b5f7",
            "route_table_id": "rtb-09107a6ec7aad28b5",
            "subnet_id": "subnet-009b45d00af13df7b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03156be6de8dee6f3",
            "route_table_id": "rtb-09107a6ec7aad28b5",
            "subnet_id": "subnet-07a0d69b4f37d5ec2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b4dc3d9bf408603",
            "route_table_id": "rtb-09107a6ec7aad28b5",
            "subnet_id": "subnet-0a3da48706a889096"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-052ced4c028671464",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052ced4c028671464",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "everyshilling-dev-private-us-east-1a",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-private-us-east-1a",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-0fa081145067c456e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa081145067c456e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "everyshilling-dev-private-us-east-1b",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-private-us-east-1b",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-06e1e9eb5ee7646be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e1e9eb5ee7646be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "everyshilling-dev-private-us-east-1c",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-private-us-east-1c",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-009b45d00af13df7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009b45d00af13df7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "everyshilling-dev-public-us-east-1a",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-public-us-east-1a",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-07a0d69b4f37d5ec2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a0d69b4f37d5ec2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "everyshilling-dev-public-us-east-1b",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-public-us-east-1b",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-0a3da48706a889096",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3da48706a889096",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "everyshilling-dev-public-us-east-1c",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev-public-us-east-1c",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-0bd1ffc1390dbe8a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:vpc/vpc-0bd1ffc1390dbe8a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0469892b6403d496e",
            "default_route_table_id": "rtb-0c07e296143a4e3dc",
            "default_security_group_id": "sg-04579f7f77378b216",
            "dhcp_options_id": "dopt-92151ae9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bd1ffc1390dbe8a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c07e296143a4e3dc",
            "owner_id": "540828511394",
            "tags": {
              "Name": "everyshilling-dev",
              "project_owner": "Apps Lab"
            },
            "tags_all": {
              "Name": "everyshilling-dev",
              "environment": "dev",
              "project": "Twala",
              "project_owner": "Apps Lab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}